# juicer

./: README.md  api.md  juicer.py  pyproject.toml  test_connection.py  unit_test.py  update_juicer_firmware.py
docs/assembly/: README.md
juice_pump3/: juice_pump3.ino
